tests/transpiler/x/java/math_ops.error
exit status 1
Main.java:4: error: bad operand types for binary operator '=='
        System.out.println((6 * 7 == null ? "nil" : 6 * 7));
                                  ^
  first type:  int
  second type: <null>
Main.java:5: error: bad operand types for binary operator '=='
        System.out.println((7 / 2 == null ? "nil" : 7 / 2));
                                  ^
  first type:  int
  second type: <null>
Main.java:6: error: bad operand types for binary operator '=='
        System.out.println((7 % 2 == null ? "nil" : 7 % 2));
                                  ^
  first type:  int
  second type: <null>
3 errors
