tests/transpiler/x/java/math_ops.java
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 18:28:15 UTC
public class Main {
    public static void main(String[] args) {
        System.out.println((6 * 7 == null ? "nil" : 6 * 7));
        System.out.println((7 / 2 == null ? "nil" : 7 / 2));
        System.out.println((7 % 2 == null ? "nil" : 7 % 2));
    }
}
